# lehrfempp

cmake/: lf_add_library.cmake
doc/doxygen/snippets/: CMakeLists.txt
experiments/efficiency/: CMakeLists.txt
lib/lf/assemble/test/: CMakeLists.txt
lib/lf/fe/: CMakeLists.txt
lib/lf/fe/test/: CMakeLists.txt
lib/lf/mesh/hybrid2d/: mesh_factory.h
lib/lf/mesh/hybrid2d/test/: CMakeLists.txt
lib/lf/mesh/utils/: CMakeLists.txt
projects/: CMakeLists.txt
projects/cohomology/: CMakeLists.txt  README.md  cohomology.h  example.cc  utility.h  verification.h  visualization.h
projects/cohomology/test/: CMakeLists.txt  examples.h  test.cc
projects/dpg/: CMakeLists.txt
projects/dpg/convergence_studies/: CMakeLists.txt
projects/dpg/test/: CMakeLists.txt
projects/ipdg_stokes/assemble/: CMakeLists.txt
projects/ipdg_stokes/assemble/test/: CMakeLists.txt
projects/ipdg_stokes/examples/lid_driven_cavity/: CMakeLists.txt
projects/ipdg_stokes/examples/manufactured_solution/: CMakeLists.txt
projects/ipdg_stokes/examples/nested_cylinders/: CMakeLists.txt
projects/ipdg_stokes/examples/poiseuille/: CMakeLists.txt
projects/ipdg_stokes/examples/step/: CMakeLists.txt
projects/ipdg_stokes/mesh/: CMakeLists.txt
projects/ipdg_stokes/mesh/test/: CMakeLists.txt
projects/ipdg_stokes/post_processing/: CMakeLists.txt
projects/ipdg_stokes/post_processing/test/: CMakeLists.txt
